syntax = "proto3";
package mantrachain.vault.v1;

option go_package = "github.com/LimeChain/mantrachain/x/vault/types";

// Params defines the parameters for the module.
message Params {
  string admin_account = 1;
  string staking_validator_address = 2;
  int64 epoch_block_height_offset = 3;
}
